--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,7 +29,7 @@
     </head>
     <body>
         <nav class="site-navigation">
-            <div class="build-date">Last Updated: {{ site.time }}</div>
+            <div class="build-date">ปรับปรุงครั้งล่าสุด: {{ site.time }}</div>
             <ul>
                 <li><a href="/#site-header">Welcome</a></li>
                 {% assign lastIsChild = false %}
@@ -39,7 +39,7 @@
                     <li><a href="/#{{ post.title | downcase | replace:' ','_' | replace:'(','' | replace:')','' | replace:'.','' | replace:'-','' }}">{{ post.title }}</a>
                     {% assign lastIsChild = post.isChild %}
                 {% endfor %}
-                <li><a href="/#site-footer">Credits</a></li>
+                <li><a href="/#site-footer">เครดิต</a></li>
             </ul>
         </nav>
         <div class="site-content">
@@ -53,11 +53,11 @@
                     <h1 class="site-title"><a href="/">PHP</a></h1>
                     <h2 class="site-slogan">The Right Way.</h2>
                 </hgroup>
-                <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://www.phptherightway.com/" data-size="large" data-hashtags="php">Tweet</a>
+                <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://www.phptherightway.com/" data-size="large" data-hashtags="php">ทวีต</a>
             </header>
             {{ content }}
             <footer class="site-footer" id="site-footer">
-                <h2 class="epsilon">Created and maintained by</h2>
+                <h2 class="epsilon">สร้างและดูแลโดย</h2>
                 <ul>
                     <li><a href="http://twitter.com/codeguy">Josh Lockhart</a></li>
                 </ul>
@@ -68,16 +68,16 @@
                     <li><a href="http://philsturgeon.co.uk/">Phil Sturgeon</a></li>
                 </ul>
 
-                <h2 class="epsilon">Project contributors</h2>
-                <div id="contributors">Loading&hellip;</div>
+                <h2 class="epsilon">ผู้ร่วมโครงการ</h2>
+                <div id="contributors">กำลังดาวน์โหลด&hellip;</div>
 
-                <h2 class="epsilon">Project sponsors</h2>
+                <h2 class="epsilon">ผู้สนับสนุนโครงการ</h2>
                 <ul class="mbd">
-                    <li><a href="http://www.newmediacampaigns.com">New Media Campaigns</a></li>
+                    <li><a href="http://www.newmediacampaigns.com">การประชาสัมพันธ์ด้วยสื่อใหม่</a></li>
                 </ul>
 
                 <p>
-                    <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/3.0/"><img alt="Creative Commons License" style="border-width:0" src="http://i.creativecommons.org/l/by-nc-sa/3.0/88x31.png" /></a><br /><span xmlns:dct="http://purl.org/dc/terms/" href="http://purl.org/dc/dcmitype/Text" property="dct:title" rel="dct:type">PHP: The Right Way</span> by <a xmlns:cc="http://creativecommons.org/ns#" href="http://www.twitter.com/codeguy" property="cc:attributionName" rel="cc:attributionURL">Josh Lockhart</a> is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/3.0/">Creative Commons Attribution-NonCommercial-ShareAlike 3.0 Unported License</a>.<br />Based on a work at <a xmlns:dct="http://purl.org/dc/terms/" href="http://www.phptherightway.com" rel="dct:source">www.phptherightway.com</a>.
+                    <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/3.0/"><img alt="Creative Commons License" style="border-width:0" src="http://i.creativecommons.org/l/by-nc-sa/3.0/88x31.png" /></a><br /><span xmlns:dct="http://purl.org/dc/terms/" href="http://purl.org/dc/dcmitype/Text" property="dct:title" rel="dct:type">PHP: The Right Way</span> โดย <a xmlns:cc="http://creativecommons.org/ns#" href="http://www.twitter.com/codeguy" property="cc:attributionName" rel="cc:attributionURL">Josh Lockhart</a> ใช้สัญญาอนุญาต <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/3.0/">ครีเอทีฟคอมมอนส์แบบแสดงที่มา-ไม่ใช้เพื่อการค้า-อนุญาตแบบเดียวกัน 3.0 ต้นฉบับ</a><br /> อยู่บนพื้นฐานของงานที่ <a xmlns:dct="http://purl.org/dc/terms/" href="http://www.phptherightway.com" rel="dct:source">www.phptherightway.com</a>
                 </p>
             </footer>
         </div>
