--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -31,17 +31,18 @@
         <header class="interior-site-header">
             <div class="site-title"><a href="/">PHP</a></div>
             <div class="site-slogan">The Right Way.</div>
-            <a class="btn btn-h" href="/">Return to Main Page</a>
+            <a class="btn btn-h" href="/">กลับสู่หน้าหลัก</a>
             <a class="fork-me" href="https://github.com/codeguy/php-the-right-way">
                 <img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub">
             </a>
         </header>
         <div class="interior-site-content">
             <div class="pbh"><em>You are reading extended content about&hellip;</em></div>
+            <div class="pbh"><em>คุณกำลังอ่านเนื้อหาเพิ่มเติ่มเกี่ยวกับ&hellip;</em></div>
             {{ content }}
             <footer class="site-footer" id="site-footer">
                 <p>
-                    <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/3.0/"><img alt="Creative Commons License" style="border-width:0" src="http://i.creativecommons.org/l/by-nc-sa/3.0/88x31.png" /></a><br /><span xmlns:dct="http://purl.org/dc/terms/" href="http://purl.org/dc/dcmitype/Text" property="dct:title" rel="dct:type">PHP: The Right Way</span> by <a xmlns:cc="http://creativecommons.org/ns#" href="http://www.twitter.com/codeguy" property="cc:attributionName" rel="cc:attributionURL">Josh Lockhart</a> is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/3.0/">Creative Commons Attribution-NonCommercial-ShareAlike 3.0 Unported License</a>.<br />Based on a work at <a xmlns:dct="http://purl.org/dc/terms/" href="http://www.phptherightway.com" rel="dct:source">www.phptherightway.com</a>.
+                    <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/3.0/"><img alt="Creative Commons License" style="border-width:0" src="http://i.creativecommons.org/l/by-nc-sa/3.0/88x31.png" /></a><br /><span xmlns:dct="http://purl.org/dc/terms/" href="http://purl.org/dc/dcmitype/Text" property="dct:title" rel="dct:type">PHP: The Right Way</span> โดย <a xmlns:cc="http://creativecommons.org/ns#" href="http://www.twitter.com/codeguy" property="cc:attributionName" rel="cc:attributionURL">Josh Lockhart</a> ใช้สัญญาอนุญาต <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/3.0/">ครีเอทีฟคอมมอนส์แบบแสดงที่มา-ไม่ใช้เพื่อการค้า-อนุญาตแบบเดียวกัน 3.0 ต้นฉบับ</a><br /> อยู่บนพื้นฐานของงานที่ <a xmlns:dct="http://purl.org/dc/terms/" href="http://www.phptherightway.com" rel="dct:source">www.phptherightway.com</a>.
                 </p>
             </footer>
         </div>
